--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ h1 {
     <div id="container">
       <img id="logo" src="logo.jpg" alt="">
       <h2>Treding Beauties</h2>
-      <a id="dbutton" href="https://abhishek7242.github.io/AI-Wallpapers/" target="_blank">Image Downloading Website</a>
+      <a id="dbutton" href="https://abhishek7242.github.io/AI-Wallpapers/" target="_blank">Wallpapers Downloading Website</a>
       <a id="button" href="coming.html" target="_blank">Open YouTube</a>
   </div>
   <div id="bottom">
