--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ h1 {
 </head>
 <body>
     <!-- <nav id="navbar">
-<img id="navlogo" src="IMG_20230607_080410_610.jpg" alt="">
-        <h1>Treding Beauties</h1>
+<img id="navlogo" src="logo.jpg" alt="">
+        <h1>AI Wallpapers </h1>
     </nav> -->
     <div id="container">
       <img id="logo" src="logo.jpg" alt="">
