--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ h1 {
     </nav> -->
     <div id="container">
       <img id="logo" src="logo.jpg" alt="">
-      <h2>Treding Beauties</h2>
+      <h2>AI Wallpapers </h2>
       <a id="dbutton" href="https://abhishek7242.github.io/AI-Wallpapers/" target="_blank">Wallpapers Downloading Website</a>
       <a id="button" href="coming.html" target="_blank">Open YouTube</a>
   </div>
